--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "challenges.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --bail"
   },
   "author": "",
   "license": "ISC",
